[metadata]
name = napari-clemreg
version = 0.0.1a3
author = Daniel Krentzel
author_email = dkrentzel@pm.me
license = MIT
url = https://github.com/krentzd/napari-clemreg
description = A plugin for registering multimodal image volumes based on common segmented structures of interest with point-clouds.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/krentzd/napari-clemreg/issues
    Documentation = https://github.com/krentzd/napari-clemreg#README.md
    Source Code = https://github.com/krentzd/napari-clemreg
    User Support = https://github.com/krentzd/napari-clemreg/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    numpy
    connected-components-3d
    scikit-image
    magicgui
    scipy
    open3d 
    transforms3d
    probreg
    tensorflow; sys_platform != 'darwin' or platform_machine != 'arm64'
    tensorflow-macos; sys_platform == 'darwin' and platform_machine == 'arm64'
    tensorflow-metal; sys_platform == 'darwin' and platform_machine == 'arm64'
    imgaug
    tifffile

[options.entry_points] 
napari.plugin = 
    napari-clemreg = napari_clemreg
