[metadata]
name = napari-clemreg
version = 0.1.4
author = Daniel Krentzel
author_email = dkrentzel@pm.me
license = MIT
url = https://github.com/krentzd/napari-clemreg
description = A plugin for registering multimodal image volumes based on common segmented structures of interest with point-clouds.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
project_urls = 
	Bug Tracker = https://github.com/krentzd/napari-clemreg/issues
	Documentation = https://github.com/krentzd/napari-clemreg#README.md
	Source Code = https://github.com/krentzd/napari-clemreg
	User Support = https://github.com/krentzd/napari-clemreg/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
	typing_extensions
	setuptools
	packaging
	numpy
	magicgui
	scipy
	napari
	scikit-image
	h5py
	matplotlib
	imageio
	tifffile
	probreg
	open3d
	transforms3d
	tqdm
	empanada-dl
	torch
	magicgui
	connected-components-3d

include_package_data = True

[options.entry_points]
napari.manifest = 
	napari-clemreg = napari_clemreg:napari.yaml

[options.package_data]
* = *.yaml
